# openapi/openapi.yml
@@ -140,14 +140,14 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                username:
                   type: string
                 password:
                   type: string
             examples:
               default:
                 value:
-                  name: John Doe
+                  username: John Doe
                   password: password
       responses:
         '201':
@@ -174,14 +174,14 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                username:
                   type: string
                 password:
                   type: string
             examples:
               default:
                 value:
-                  name: John Doe
+                  username: John Doe
                   password: password
       responses:
         '200':
